# image-classification-baselines

./: .gitignore  README.md  pyproject.toml  requirements.txt
image-classification-baselines/models/: alexnet.py  vision_transformer.py
image-classification-baselines/utils/: explanation.py
