[tool.poetry]
name = "image-classification-baselines"
version = "0.1.0"
description = ""
authors = ["umepy <haruya04183083@gmail.com>"]
readme = "README.md"
packages = [{include = "image_classification_baselines"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = {url = "https://download.pytorch.org/whl/cu116/torch-1.13.1%2Bcu116-cp310-cp310-linux_x86_64.whl" }
numpy = "^1.24.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.11.4"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
